@@ -1,3 +1,10 @@
+2007-02-19 [paul]	0.1.0cvs4
+
+	* src/poppler_viewer.c
+		Display error on broken files, and cleanup display
+		Handle Postscript files
+		Thanks to Colin
+
 2007-02-19 [paul]	0.1.0cvs3
 
 	* src/poppler_viewer.c
